# routers/postRouter.js
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 const express = require('express');
 const Router = express.Router();
 const Board = require('../schemas/board');
@@ -6,7 +5,7 @@ const authMiddleWare = require("../middlewares/auth-middleware");
 
 //게시글 상세페이지 API
 Router.get('/inspect/:postID', async(req, res) => {
-  const { postID } = req.body;
+  const { postID } = req.params;
 
   try {
     const postingList = await Board.findById(postID);
@@ -21,21 +20,36 @@ Router.get('/inspect/:postID', async(req, res) => {
 //게시물 불러오기 API
 Router.get('/postlist', async(req, res) => {
   try {
-    const postList = await Board.find({postingDel: 1}).sort("-date");
+    const postList = await Board.find({postingDel: 1}).sort("-postingDate");
     res.status(201).json({ postList : postList });
   } catch (err) {
-    res.status(500).send({
+    res.status(400).send({
+      errorMessage: '해당 게시물을 더이상 찾을 수 없습니다.'
+    })
+  }
+})
+
+//게시물 불러오기 API
+Router.get('/postBest', async(req, res) => {
+  try {
+    const postList = await Board.find().sort("-postingSeen").limit(4);
+    res.status(201).json({ postList : postList });
+  } catch (err) {
+    res.status(400).send({
       errorMessage: '해당 게시물을 더이상 찾을 수 없습니다.'
     })
   }
 })
 
 //게시글 등록 API
+
 Router.post('/posting', authMiddleWare, async(req, res) => {
   const {user} = res.locals
   const { postingTitle, postingDate, postingComment, postingImgUrl, postingDel } = req.body;
   try {
-    const posting = new Board({postingTitle, postingEmail:user.userEmail ,postingAuthor: user.userNickname, postingDate, postingComment, postingImgUrl, postingDel})
+    const posting = new Board({postingTitle, postingEmail:user.userEmail ,postingAuthor: user.userNickname, 
+      postingDate, postingComment, postingImgUrl, postingSeen:0,
+      postingDel})
     await posting.save();
     res.status(201).send({ 
       message: "게시글 등록을 완료했습니다."
@@ -48,7 +62,7 @@ Router.post('/posting', authMiddleWare, async(req, res) => {
 })
 
 //게시글 수정 API
-Router.patch("/postModify", async (req, res, next) => {
+Router.patch('/postModify', async (req, res, next) => {
   try {
     const { postID, postingAuthor, postingTitle, postingComment, postingUpdate } = req.body;
       await Board.updateOne({_id: postID},{$set: { postingTitle, postingAuthor, postingComment, postingUpdate}});
@@ -59,81 +73,28 @@ Router.patch("/postModify", async (req, res, next) => {
 });
 
 //게시글 삭제 API
-Router.patch("/postDelete", async(req, res) => {
+Router.patch('/postDelete', async(req, res) => {
   const { postID } = req.body;
   await Board.updateOne({_id: postID},{$set : {postingDel: 0}});
   res.send({ 
     Message: '게시글 삭제에 성공했습니다.' 
   });
 })
-=======
-const express = require('express');
-const Router = express.Router();
-const Board = require('../schemas/board');
-const authMiddleWare = require("../middlewares/auth-middleware");
 
-//게시글 상세페이지 API
-Router.get('/inspect/:postID', async(req, res) => {
+//게시글 조회수 증가
+Router.patch('/postClick', async(req, res) => {
   const { postID } = req.body;
-
   try {
-    const postingList = await Board.findById({postID});
-    res.json({ postingList: postingList })
+    let postingSeen = await Board.findById({_id: postID});
+    let count = postingSeen.postingSeen;
+    await Board.updateOne({_id: postID},{$set : {postingSeen: count+1}});
+    res.send({});
   } catch (err) {
-    res.status(500).send({
-      errorMessage: '해당 페이지에 게시글이 존재하지 않습니다.'
-    });
-  }
-})
-
-//게시물 불러오기 API
-Router.get('/postlist', async(req, res) => {
-  try {
-    const postList = await Board.find({postingDel: 1}).sort("-date");
-    res.status(201).json({ postList : postList });
-  } catch (err) {
-    res.status(500).send({
+    res.status(400).send({
       errorMessage: '해당 게시물을 더이상 찾을 수 없습니다.'
     })
   }
 })
 
-//게시글 등록 API
 
-Router.post('/posting', authMiddleWare, async(req, res) => {
-  const {user} = res.locals
-  const { postingTitle, postingDate, postingComment, postingImgUrl, postingDel } = req.body;
-  try {
-    const posting = new Board({postingTitle, postingEmail:user.userEmail ,postingAuthor: user.userNickname, postingDate, postingComment, postingImgUrl, postingDel})
-    await posting.save();
-    res.status(201).send({ 
-      message: "게시글 등록을 완료했습니다."
-    });
-  } catch (err) {
-      res.status(500).send({ 
-        errorMessage: '게시글 등록에 실패했습니다.'
-      });
-  }
-})
-
-//게시글 수정 API
-Router.patch("/postModify", async (req, res, next) => {
-  try {
-    const { postID ,postingTitle, postingComment, postingUpdate } = req.body;
-      await Board.updateOne({_id: postID},{ postingTitle, postingComment, postingUpdate });
-      res.status(200).send({ message: '게시글 수정이 완료되었습니다!' });
-  } catch (err) {
-    res.status(500).send({ errorMessage: '게시글 수정 실패!, 관리자에 문의해주세요'})
-  } //error found
-});
-
-//게시글 삭제 API
-Router.delete("/postDelete", async(req, res) => {
-  const { postID } = req.body;
-  await Board.updateOne({_id: postID},{$set : {postingDel: 0}});
-  res.send({ 
-    Message: '게시글 삭제에 성공했습니다.' 
-  });
-})
->>>>>>> b12c8b473a681330e46c9c87394cdc9a546e0943
 module.exports = Router;
