# routers/replyRouter.js
@@ -1,14 +1,15 @@
-<<<<<<< HEAD
 const express = require('express');
 const authMiddleWare = require('../middlewares/auth-middleware');
 const Reply = require('../schemas/reply');
 const Router = express.Router();
 
-Router.get('/replyList', async(req, res) => {
+Router.get('/replyList/:postID', async(req, res) => {
     try {
-        const { postID } = req.body;
+        //console.log(req.params)
+        const { postID } = req.params;
         const Replies = await Reply.find({postID : postID});
         res.status(200).json({ Replies: Replies });
+        console.log(Replies);
     } catch (err) {
         console.error(err);
     }
@@ -17,8 +18,8 @@ Router.get('/replyList', async(req, res) => {
 Router.post('/replyPost', authMiddleWare, async(req, res) => {
     const { user } = res.locals
     try {
-        const { postID, replyComment } = req.body;
-        const reply = new Reply({ postID, replyNickname: user.userNickname, replyComment, replyDel: 1 });
+        const { postID, replyNickname, replyComment } = req.body;
+        const reply = new Reply({ postID, replyNickname, replyComment, replyDel: 1 });
         await reply.save();
         res.status(201).send({ result: 'success' });
     } catch (error) {
@@ -46,54 +47,4 @@ Router.patch('/replyModify', authMiddleWare, async(req, res) => {
     res.status(201).send({ result: 'success' });
 });
 
-=======
-const express = require('express');
-const authMiddleWare = require('../middlewares/auth-middleware');
-const Reply = require('../schemas/reply');
-const Router = express.Router();
-
-Router.post('/replyPost', authMiddleWare, async(req, res) => {
-    const { user } = res.locals
-    try {
-        const { postID, replyComment, replyDel } = req.body;
-        const reply = new Reply({ postID, replyNickname: user.userNickname, replyComment, replyDel });
-        await reply.save();
-        res.status(201).send({ result: 'success' });
-    } catch (error) {
-        console.error(err);
-    }
-});
-
-Router.get('/replyinspect/:postID', async(req, res) => {
-    try {
-        const { postID } = req.body;
-        const Replies = await Reply.find({ postID });
-        res.json({ Replies: Replies });
-        res.status(200).send({ result: 'success' });
-    } catch (err) {
-        console.error(err);
-    }
-});
-
-Router.patch('/replyDelete', authMiddleWare, async(req, res) => {
-    const { replyID } = req.body;
-    await Reply.updateOne({ replyID }, {
-        $set: {
-            replyDel: 0,
-        },
-    });
-    res.status(201).send({ result: 'success' });
-});
-
-Router.patch('/replyModify', authMiddleWare, async(req, res) => {
-    const { replyID, replyComment } = req.body
-    await Reply.updateOne({ replyID }, {
-        $set: {
-           replyComment
-        },
-    });
-    res.status(201).send({ result: 'success' });
-});
-
->>>>>>> b12c8b473a681330e46c9c87394cdc9a546e0943
 module.exports = Router;
